--- a/views/new.html
+++ b/views/new.html
@@ -1,6 +1,6 @@
 <%- include('__layout/header.html') %>
 
-<h3>Create a new rental</h3>
+<h3>Create a new rental!</h3>
 
 <form class="card p-3 m-3 w-50" action="/api/rental" method="post" encType="multipart/form-data">
   <div class="form-group">
